updated form titles on join and fixed spacing

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -298,7 +298,7 @@ margin-right: 5px;
   max-width: 516px;
 }
 
-#engage #section-heading{
+#engage #section-heading, #join #section-heading{
   margin-bottom: 25px;
 }
 
